--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "author": "ddededodediamante",
   "type": "commonjs",
   "main": "index.js",
+  "types": "./index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   }
